<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginBetweenElements"
            android:text="@string/selectTown"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/townSpinner"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/marginBetweenElements"
            android:layout_height="40dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginBetweenElements"
            android:text="@string/selectSeason"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/seasonSpinner"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:layout_marginTop="50dp"
            android:layout_marginBottom="@dimen/marginBetweenElements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/averageTmp" />

        <TextView
            android:id="@+id/averageTmpTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="@dimen/marginBetweenElements"
            android:gravity="center"
            android:text="@string/typeOfTown"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/typeOfTownTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

</RelativeLayout>