<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    tools:context=".ui.settings.SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/buttonsLinearLayout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/newButton"
                    android:text="NEW"
                    android:textColor="@color/colorAccent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp" />

                <Button
                    android:id="@+id/updateButton"
                    android:text="UPGRADE"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/choosingConcreteTown"
                android:layout_below="@id/buttonsLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/selectTypeOfTownLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marginBetweenElements"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/typeOfTown"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/typeOfTownSpinner"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/selectTownLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/selectTypeOfTownLL"
                    android:layout_marginBottom="@dimen/marginBetweenElements"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selectTown"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/townSpinner"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>


            <View
                android:id="@+id/dividerLine"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="10dp"
                android:background="#7b7b7b"
                android:layout_below="@id/choosingConcreteTown"/>

            <RadioGroup
                android:id="@+id/selectMeasureTmpRG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dividerLine"
                android:gravity="center"
                android:checkedButton="@id/celsiusRadioButton"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/celsiusRadioButton"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/celsiusTmp" />

                <RadioButton
                    android:id="@+id/kelvinRadioButton"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/kelvinTmp" />

                <RadioButton
                    android:id="@+id/fRadioButton"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fahrenheitTmp" />

            </RadioGroup>

            <LinearLayout
                android:id="@+id/nameLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/selectMeasureTmpRG"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/name"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/nameEditText"
                    android:inputType="text"
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/typeOfTownLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameLinearLayout"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/typeOfTownTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/type"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/typeSpinner"
                    android:theme="@style/mySpinnerItemStyle"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

            </LinearLayout>

            <com.ironfake.taskweather.utils.ExpandableHeightGridView
                android:id="@+id/gridView"
                android:scrollbars="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/typeOfTownLinearLayout"
                android:clipToPadding="false"
                android:isScrollContainer="false"
                android:numColumns="auto_fit"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>